[package]
name = "putpng"
version = "1.0.0"
edition = "2024"
authors = ["Tyler Wojciechowski <tylerwojo81@gmail.com>"]
description = "Replacement for the doom modding tools grabpng and setpng"
license = "MIT or Apache-2.0"
readme = "readme.md"
repository = "https://github.com/wojo81/putpng"
documentation = "https://docs.rs/putpng"
homepage = "https://github.com/wojo81/putpng"
keywords = ["grabpng", "setpng", "doom", "cli", "library", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.9"
wild = "2.2.1"
thiserror = "*"
